--- a/awawawiwa-frontend/package.json
+++ b/awawawiwa-frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "awawawiwa-frontend",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.6",
     "lucide-react": "^0.511.0",
     "path": "^0.12.7",
