--- a/awawawiwa-frontend/package.json
+++ b/awawawiwa-frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.6",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.511.0",
     "path": "^0.12.7",
     "react": "^19.0.0",
